Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    PROCEDURE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON bloco DOT
Rule 2     bloco -> VAR declaracoes BEGIN instrucoes END
Rule 3     bloco -> BEGIN instrucoes END
Rule 4     declaracoes -> declaracoes declaracao
Rule 5     declaracoes -> declaracao
Rule 6     declaracoes -> empty
Rule 7     declaracao -> lista_ids COLON tipo SEMICOLON
Rule 8     lista_ids -> ID
Rule 9     lista_ids -> lista_ids COMMA ID
Rule 10    tipo -> INTEGER
Rule 11    tipo -> BOOLEAN
Rule 12    tipo -> STRING
Rule 13    tipo -> REAL
Rule 14    tipo -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF tipo
Rule 15    instrucoes -> statement_list
Rule 16    statement_list -> statement_list SEMICOLON statement
Rule 17    statement_list -> statement_list SEMICOLON
Rule 18    statement_list -> statement
Rule 19    statement -> atribuicao_instr_only
Rule 20    statement -> leitura_stmt
Rule 21    statement -> escrita_stmt
Rule 22    statement -> if_then_else
Rule 23    statement -> if_then
Rule 24    statement -> while_stmt
Rule 25    statement -> for_stmt
Rule 26    statement -> bloco_instr
Rule 27    atribuicao_instr_only -> ID ASSIGN expressao
Rule 28    leitura_stmt -> READLN LPAREN ID RPAREN
Rule 29    escrita_stmt -> WRITELN LPAREN exp_list RPAREN
Rule 30    escrita_stmt -> WRITE LPAREN exp_list RPAREN
Rule 31    exp_list -> expressao
Rule 32    exp_list -> exp_list COMMA expressao
Rule 33    if_then_else -> IF expressao THEN statement ELSE statement
Rule 34    if_then -> IF expressao THEN statement
Rule 35    while_stmt -> WHILE expressao DO statement
Rule 36    for_stmt -> FOR ID ASSIGN expressao TO expressao DO statement
Rule 37    for_stmt -> FOR ID ASSIGN expressao DOWNTO expressao DO statement
Rule 38    bloco_instr -> BEGIN instrucoes END
Rule 39    expressao -> expressao PLUS expressao
Rule 40    expressao -> expressao MINUS expressao
Rule 41    expressao -> expressao TIMES expressao
Rule 42    expressao -> expressao DIVIDE expressao
Rule 43    expressao -> expressao DIV expressao
Rule 44    expressao -> expressao MOD expressao
Rule 45    expressao -> expressao EQUAL expressao
Rule 46    expressao -> expressao NE expressao
Rule 47    expressao -> expressao LT expressao
Rule 48    expressao -> expressao LE expressao
Rule 49    expressao -> expressao GT expressao
Rule 50    expressao -> expressao GE expressao
Rule 51    expressao -> expressao AND expressao
Rule 52    expressao -> expressao OR expressao
Rule 53    expressao -> LPAREN expressao RPAREN
Rule 54    expressao -> ID
Rule 55    expressao -> NUMBER
Rule 56    expressao -> STRING_LITERAL
Rule 57    expressao -> TRUE
Rule 58    expressao -> FALSE
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
ARRAY                : 14
ASSIGN               : 27 36 37
BEGIN                : 2 3 38
BOOLEAN              : 11
COLON                : 7
COMMA                : 9 32
DIV                  : 43
DIVIDE               : 42
DO                   : 35 36 37
DOT                  : 1
DOTDOT               : 14
DOWNTO               : 37
ELSE                 : 33
END                  : 2 3 38
EQUAL                : 45
FALSE                : 58
FOR                  : 36 37
FUNCTION             : 
GE                   : 50
GT                   : 49
ID                   : 1 8 9 27 28 36 37 54
IF                   : 33 34
INTEGER              : 10
LBRACKET             : 14
LE                   : 48
LPAREN               : 28 29 30 53
LT                   : 47
MINUS                : 40
MOD                  : 44
NE                   : 46
NUMBER               : 14 14 55
OF                   : 14
OR                   : 52
PLUS                 : 39
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 14
READLN               : 28
REAL                 : 13
RPAREN               : 28 29 30 53
SEMICOLON            : 1 7 16 17
STRING               : 12
STRING_LITERAL       : 56
THEN                 : 33 34
TIMES                : 41
TO                   : 36
TRUE                 : 57
VAR                  : 2
WHILE                : 35
WRITE                : 30
WRITELN              : 29
error                : 

Nonterminals, with rules where they appear

atribuicao_instr_only : 19
bloco                : 1
bloco_instr          : 26
declaracao           : 4 5
declaracoes          : 2 4
empty                : 6
escrita_stmt         : 21
exp_list             : 29 30 32
expressao            : 27 31 32 33 34 35 36 36 37 37 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53
for_stmt             : 25
if_then              : 23
if_then_else         : 22
instrucoes           : 2 3 38
leitura_stmt         : 20
lista_ids            : 7 9
programa             : 0
statement            : 16 18 33 33 34 35 36 37
statement_list       : 15 16 17
tipo                 : 7 14
while_stmt           : 24

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON bloco DOT

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON bloco DOT

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON bloco DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . bloco DOT
    (2) bloco -> . VAR declaracoes BEGIN instrucoes END
    (3) bloco -> . BEGIN instrucoes END

    VAR             shift and go to state 6
    BEGIN           shift and go to state 7

    bloco                          shift and go to state 5

state 5

    (1) programa -> PROGRAM ID SEMICOLON bloco . DOT

    DOT             shift and go to state 8


state 6

    (2) bloco -> VAR . declaracoes BEGIN instrucoes END
    (4) declaracoes -> . declaracoes declaracao
    (5) declaracoes -> . declaracao
    (6) declaracoes -> . empty
    (7) declaracao -> . lista_ids COLON tipo SEMICOLON
    (59) empty -> .
    (8) lista_ids -> . ID
    (9) lista_ids -> . lista_ids COMMA ID

  ! shift/reduce conflict for ID resolved as shift
    BEGIN           reduce using rule 59 (empty -> .)
    ID              shift and go to state 13

  ! ID              [ reduce using rule 59 (empty -> .) ]

    declaracoes                    shift and go to state 9
    declaracao                     shift and go to state 10
    empty                          shift and go to state 11
    lista_ids                      shift and go to state 12

state 7

    (3) bloco -> BEGIN . instrucoes END
    (15) instrucoes -> . statement_list
    (16) statement_list -> . statement_list SEMICOLON statement
    (17) statement_list -> . statement_list SEMICOLON
    (18) statement_list -> . statement
    (19) statement -> . atribuicao_instr_only
    (20) statement -> . leitura_stmt
    (21) statement -> . escrita_stmt
    (22) statement -> . if_then_else
    (23) statement -> . if_then
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . bloco_instr
    (27) atribuicao_instr_only -> . ID ASSIGN expressao
    (28) leitura_stmt -> . READLN LPAREN ID RPAREN
    (29) escrita_stmt -> . WRITELN LPAREN exp_list RPAREN
    (30) escrita_stmt -> . WRITE LPAREN exp_list RPAREN
    (33) if_then_else -> . IF expressao THEN statement ELSE statement
    (34) if_then -> . IF expressao THEN statement
    (35) while_stmt -> . WHILE expressao DO statement
    (36) for_stmt -> . FOR ID ASSIGN expressao TO expressao DO statement
    (37) for_stmt -> . FOR ID ASSIGN expressao DOWNTO expressao DO statement
    (38) bloco_instr -> . BEGIN instrucoes END

    ID              shift and go to state 26
    READLN          shift and go to state 27
    WRITELN         shift and go to state 28
    WRITE           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    BEGIN           shift and go to state 14

    instrucoes                     shift and go to state 15
    statement_list                 shift and go to state 16
    statement                      shift and go to state 17
    atribuicao_instr_only          shift and go to state 18
    leitura_stmt                   shift and go to state 19
    escrita_stmt                   shift and go to state 20
    if_then_else                   shift and go to state 21
    if_then                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    bloco_instr                    shift and go to state 25

state 8

    (1) programa -> PROGRAM ID SEMICOLON bloco DOT .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON bloco DOT .)


state 9

    (2) bloco -> VAR declaracoes . BEGIN instrucoes END
    (4) declaracoes -> declaracoes . declaracao
    (7) declaracao -> . lista_ids COLON tipo SEMICOLON
    (8) lista_ids -> . ID
    (9) lista_ids -> . lista_ids COMMA ID

    BEGIN           shift and go to state 33
    ID              shift and go to state 13

    declaracao                     shift and go to state 34
    lista_ids                      shift and go to state 12

state 10

    (5) declaracoes -> declaracao .

    BEGIN           reduce using rule 5 (declaracoes -> declaracao .)
    ID              reduce using rule 5 (declaracoes -> declaracao .)


state 11

    (6) declaracoes -> empty .

    BEGIN           reduce using rule 6 (declaracoes -> empty .)
    ID              reduce using rule 6 (declaracoes -> empty .)


state 12

    (7) declaracao -> lista_ids . COLON tipo SEMICOLON
    (9) lista_ids -> lista_ids . COMMA ID

    COLON           shift and go to state 35
    COMMA           shift and go to state 36


state 13

    (8) lista_ids -> ID .

    COLON           reduce using rule 8 (lista_ids -> ID .)
    COMMA           reduce using rule 8 (lista_ids -> ID .)


state 14

    (38) bloco_instr -> BEGIN . instrucoes END
    (15) instrucoes -> . statement_list
    (16) statement_list -> . statement_list SEMICOLON statement
    (17) statement_list -> . statement_list SEMICOLON
    (18) statement_list -> . statement
    (19) statement -> . atribuicao_instr_only
    (20) statement -> . leitura_stmt
    (21) statement -> . escrita_stmt
    (22) statement -> . if_then_else
    (23) statement -> . if_then
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . bloco_instr
    (27) atribuicao_instr_only -> . ID ASSIGN expressao
    (28) leitura_stmt -> . READLN LPAREN ID RPAREN
    (29) escrita_stmt -> . WRITELN LPAREN exp_list RPAREN
    (30) escrita_stmt -> . WRITE LPAREN exp_list RPAREN
    (33) if_then_else -> . IF expressao THEN statement ELSE statement
    (34) if_then -> . IF expressao THEN statement
    (35) while_stmt -> . WHILE expressao DO statement
    (36) for_stmt -> . FOR ID ASSIGN expressao TO expressao DO statement
    (37) for_stmt -> . FOR ID ASSIGN expressao DOWNTO expressao DO statement
    (38) bloco_instr -> . BEGIN instrucoes END

    ID              shift and go to state 26
    READLN          shift and go to state 27
    WRITELN         shift and go to state 28
    WRITE           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    BEGIN           shift and go to state 14

    instrucoes                     shift and go to state 37
    statement_list                 shift and go to state 16
    statement                      shift and go to state 17
    atribuicao_instr_only          shift and go to state 18
    leitura_stmt                   shift and go to state 19
    escrita_stmt                   shift and go to state 20
    if_then_else                   shift and go to state 21
    if_then                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    bloco_instr                    shift and go to state 25

state 15

    (3) bloco -> BEGIN instrucoes . END

    END             shift and go to state 38


state 16

    (15) instrucoes -> statement_list .
    (16) statement_list -> statement_list . SEMICOLON statement
    (17) statement_list -> statement_list . SEMICOLON

    END             reduce using rule 15 (instrucoes -> statement_list .)
    SEMICOLON       shift and go to state 39


state 17

    (18) statement_list -> statement .

    SEMICOLON       reduce using rule 18 (statement_list -> statement .)
    END             reduce using rule 18 (statement_list -> statement .)


state 18

    (19) statement -> atribuicao_instr_only .

    SEMICOLON       reduce using rule 19 (statement -> atribuicao_instr_only .)
    END             reduce using rule 19 (statement -> atribuicao_instr_only .)
    ELSE            reduce using rule 19 (statement -> atribuicao_instr_only .)


state 19

    (20) statement -> leitura_stmt .

    SEMICOLON       reduce using rule 20 (statement -> leitura_stmt .)
    END             reduce using rule 20 (statement -> leitura_stmt .)
    ELSE            reduce using rule 20 (statement -> leitura_stmt .)


state 20

    (21) statement -> escrita_stmt .

    SEMICOLON       reduce using rule 21 (statement -> escrita_stmt .)
    END             reduce using rule 21 (statement -> escrita_stmt .)
    ELSE            reduce using rule 21 (statement -> escrita_stmt .)


state 21

    (22) statement -> if_then_else .

    SEMICOLON       reduce using rule 22 (statement -> if_then_else .)
    END             reduce using rule 22 (statement -> if_then_else .)
    ELSE            reduce using rule 22 (statement -> if_then_else .)


state 22

    (23) statement -> if_then .

    SEMICOLON       reduce using rule 23 (statement -> if_then .)
    END             reduce using rule 23 (statement -> if_then .)
    ELSE            reduce using rule 23 (statement -> if_then .)


state 23

    (24) statement -> while_stmt .

    SEMICOLON       reduce using rule 24 (statement -> while_stmt .)
    END             reduce using rule 24 (statement -> while_stmt .)
    ELSE            reduce using rule 24 (statement -> while_stmt .)


state 24

    (25) statement -> for_stmt .

    SEMICOLON       reduce using rule 25 (statement -> for_stmt .)
    END             reduce using rule 25 (statement -> for_stmt .)
    ELSE            reduce using rule 25 (statement -> for_stmt .)


state 25

    (26) statement -> bloco_instr .

    SEMICOLON       reduce using rule 26 (statement -> bloco_instr .)
    END             reduce using rule 26 (statement -> bloco_instr .)
    ELSE            reduce using rule 26 (statement -> bloco_instr .)


state 26

    (27) atribuicao_instr_only -> ID . ASSIGN expressao

    ASSIGN          shift and go to state 40


state 27

    (28) leitura_stmt -> READLN . LPAREN ID RPAREN

    LPAREN          shift and go to state 41


state 28

    (29) escrita_stmt -> WRITELN . LPAREN exp_list RPAREN

    LPAREN          shift and go to state 42


state 29

    (30) escrita_stmt -> WRITE . LPAREN exp_list RPAREN

    LPAREN          shift and go to state 43


state 30

    (33) if_then_else -> IF . expressao THEN statement ELSE statement
    (34) if_then -> IF . expressao THEN statement
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expressao                      shift and go to state 44

state 31

    (35) while_stmt -> WHILE . expressao DO statement
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expressao                      shift and go to state 51

state 32

    (36) for_stmt -> FOR . ID ASSIGN expressao TO expressao DO statement
    (37) for_stmt -> FOR . ID ASSIGN expressao DOWNTO expressao DO statement

    ID              shift and go to state 52


state 33

    (2) bloco -> VAR declaracoes BEGIN . instrucoes END
    (15) instrucoes -> . statement_list
    (16) statement_list -> . statement_list SEMICOLON statement
    (17) statement_list -> . statement_list SEMICOLON
    (18) statement_list -> . statement
    (19) statement -> . atribuicao_instr_only
    (20) statement -> . leitura_stmt
    (21) statement -> . escrita_stmt
    (22) statement -> . if_then_else
    (23) statement -> . if_then
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . bloco_instr
    (27) atribuicao_instr_only -> . ID ASSIGN expressao
    (28) leitura_stmt -> . READLN LPAREN ID RPAREN
    (29) escrita_stmt -> . WRITELN LPAREN exp_list RPAREN
    (30) escrita_stmt -> . WRITE LPAREN exp_list RPAREN
    (33) if_then_else -> . IF expressao THEN statement ELSE statement
    (34) if_then -> . IF expressao THEN statement
    (35) while_stmt -> . WHILE expressao DO statement
    (36) for_stmt -> . FOR ID ASSIGN expressao TO expressao DO statement
    (37) for_stmt -> . FOR ID ASSIGN expressao DOWNTO expressao DO statement
    (38) bloco_instr -> . BEGIN instrucoes END

    ID              shift and go to state 26
    READLN          shift and go to state 27
    WRITELN         shift and go to state 28
    WRITE           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    BEGIN           shift and go to state 14

    instrucoes                     shift and go to state 53
    statement_list                 shift and go to state 16
    statement                      shift and go to state 17
    atribuicao_instr_only          shift and go to state 18
    leitura_stmt                   shift and go to state 19
    escrita_stmt                   shift and go to state 20
    if_then_else                   shift and go to state 21
    if_then                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    bloco_instr                    shift and go to state 25

state 34

    (4) declaracoes -> declaracoes declaracao .

    BEGIN           reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    ID              reduce using rule 4 (declaracoes -> declaracoes declaracao .)


state 35

    (7) declaracao -> lista_ids COLON . tipo SEMICOLON
    (10) tipo -> . INTEGER
    (11) tipo -> . BOOLEAN
    (12) tipo -> . STRING
    (13) tipo -> . REAL
    (14) tipo -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF tipo

    INTEGER         shift and go to state 55
    BOOLEAN         shift and go to state 56
    STRING          shift and go to state 57
    REAL            shift and go to state 58
    ARRAY           shift and go to state 59

    tipo                           shift and go to state 54

state 36

    (9) lista_ids -> lista_ids COMMA . ID

    ID              shift and go to state 60


state 37

    (38) bloco_instr -> BEGIN instrucoes . END

    END             shift and go to state 61


state 38

    (3) bloco -> BEGIN instrucoes END .

    DOT             reduce using rule 3 (bloco -> BEGIN instrucoes END .)


state 39

    (16) statement_list -> statement_list SEMICOLON . statement
    (17) statement_list -> statement_list SEMICOLON .
    (19) statement -> . atribuicao_instr_only
    (20) statement -> . leitura_stmt
    (21) statement -> . escrita_stmt
    (22) statement -> . if_then_else
    (23) statement -> . if_then
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . bloco_instr
    (27) atribuicao_instr_only -> . ID ASSIGN expressao
    (28) leitura_stmt -> . READLN LPAREN ID RPAREN
    (29) escrita_stmt -> . WRITELN LPAREN exp_list RPAREN
    (30) escrita_stmt -> . WRITE LPAREN exp_list RPAREN
    (33) if_then_else -> . IF expressao THEN statement ELSE statement
    (34) if_then -> . IF expressao THEN statement
    (35) while_stmt -> . WHILE expressao DO statement
    (36) for_stmt -> . FOR ID ASSIGN expressao TO expressao DO statement
    (37) for_stmt -> . FOR ID ASSIGN expressao DOWNTO expressao DO statement
    (38) bloco_instr -> . BEGIN instrucoes END

    SEMICOLON       reduce using rule 17 (statement_list -> statement_list SEMICOLON .)
    END             reduce using rule 17 (statement_list -> statement_list SEMICOLON .)
    ID              shift and go to state 26
    READLN          shift and go to state 27
    WRITELN         shift and go to state 28
    WRITE           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    BEGIN           shift and go to state 14

    statement                      shift and go to state 62
    atribuicao_instr_only          shift and go to state 18
    leitura_stmt                   shift and go to state 19
    escrita_stmt                   shift and go to state 20
    if_then_else                   shift and go to state 21
    if_then                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    bloco_instr                    shift and go to state 25

state 40

    (27) atribuicao_instr_only -> ID ASSIGN . expressao
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expressao                      shift and go to state 63

state 41

    (28) leitura_stmt -> READLN LPAREN . ID RPAREN

    ID              shift and go to state 64


state 42

    (29) escrita_stmt -> WRITELN LPAREN . exp_list RPAREN
    (31) exp_list -> . expressao
    (32) exp_list -> . exp_list COMMA expressao
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    exp_list                       shift and go to state 65
    expressao                      shift and go to state 66

state 43

    (30) escrita_stmt -> WRITE LPAREN . exp_list RPAREN
    (31) exp_list -> . expressao
    (32) exp_list -> . exp_list COMMA expressao
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    exp_list                       shift and go to state 67
    expressao                      shift and go to state 66

state 44

    (33) if_then_else -> IF expressao . THEN statement ELSE statement
    (34) if_then -> IF expressao . THEN statement
    (39) expressao -> expressao . PLUS expressao
    (40) expressao -> expressao . MINUS expressao
    (41) expressao -> expressao . TIMES expressao
    (42) expressao -> expressao . DIVIDE expressao
    (43) expressao -> expressao . DIV expressao
    (44) expressao -> expressao . MOD expressao
    (45) expressao -> expressao . EQUAL expressao
    (46) expressao -> expressao . NE expressao
    (47) expressao -> expressao . LT expressao
    (48) expressao -> expressao . LE expressao
    (49) expressao -> expressao . GT expressao
    (50) expressao -> expressao . GE expressao
    (51) expressao -> expressao . AND expressao
    (52) expressao -> expressao . OR expressao

    THEN            shift and go to state 68
    PLUS            shift and go to state 69
    MINUS           shift and go to state 70
    TIMES           shift and go to state 71
    DIVIDE          shift and go to state 72
    DIV             shift and go to state 73
    MOD             shift and go to state 74
    EQUAL           shift and go to state 75
    NE              shift and go to state 76
    LT              shift and go to state 77
    LE              shift and go to state 78
    GT              shift and go to state 79
    GE              shift and go to state 80
    AND             shift and go to state 81
    OR              shift and go to state 82


state 45

    (53) expressao -> LPAREN . expressao RPAREN
    (39) expressao -> . expressao PLUS expressao
    (40) expressao -> . expressao MINUS expressao
    (41) expressao -> . expressao TIMES expressao
    (42) expressao -> . expressao DIVIDE expressao
    (43) expressao -> . expressao DIV expressao
    (44) expressao -> . expressao MOD expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao NE expressao
    (47) expressao -> . expressao LT expressao
    (48) expressao -> . expressao LE expressao
    (49) expressao -> . expressao GT expressao
    (50) expressao -> . expressao GE expressao
    (51) expressao -> . expressao AND expressao
    (52) expressao -> . expressao OR expressao
    (53) expressao -> . LPAREN expressao RPAREN
    (54) expressao -> . ID
    (55) expressao -> . NUMBER
    (56) expressao -> . STRING_LITERAL
    (57) expressao -> . TRUE
    (58) expressao -> . FALSE

    LPAREN          shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expressao                      shift and go to state 83

state 46

    (54) expressao -> ID .

    THEN            reduce using rule 54 (expressao -> ID .)
    PLUS            reduce using rule 54 (expressao -> ID .)
    MINUS           reduce using rule 54 (expressao -> ID .)
    TIMES           reduce using rule 54 (expressao -> ID .)
    DIVIDE          reduce using rule 54 (expressao -> ID .)
    DIV             reduce using rule 54 (expressao -> ID .)
    MOD             reduce using rule 54 (expressao -> ID .)
    EQUAL           reduce using rule 54 (expressao -> ID .)
    NE              reduce using rule 54 (expressao -> ID .)
    LT              reduce using rule 54 (expressao -> ID .)
    LE              reduce using rule 54 (expressao -> ID .)
    GT              reduce using rule 54 (expressao -> ID .)
    GE              reduce using rule 54 (expressao -> ID .)
    AND             reduce using rule 54 (expressao -> ID .)
    OR              reduce using rule 54 (expressao -> ID .)
    DO              reduce using rule 54 (expressao -> ID .)
    SEMICOLON       reduce using rule 54 (expressao -> ID .)
    END             reduce using rule 54 (expressao -> ID .)
    ELSE            reduce using rule 54 (expressao -> ID .)
    RPAREN          reduce using rule 54 (expressao -> ID .)
    COMMA           reduce using rule 54 (expressao -> ID .)
    TO              reduce using rule 54 (expressao -> ID .)
    DOWNTO          reduce using rule 54 (expressao -> ID .)


state 47

    (55) expressao -> NUMBER .

    THEN            reduce using rule 55 (expressao -> NUMBER .)
    PLUS            reduce using rule 55 (expressao -> NUMBER .)
    MINUS           reduce using rule 55 (expressao -> NUMBER .)
    TIMES           reduce using rule 55 (expressao -> NUMBER .)
    DIVIDE          reduce using rule 55 (expressao -> NUMBER .)
    DIV             reduce using rule 55 (expressao -> NUMBER .)
    MOD             reduce using rule 55 (expressao -> NUMBER .)
    EQUAL           reduce using rule 55 (expressao -> NUMBER .)
    NE              reduce using rule 55 (expressao -> NUMBER .)
    LT              reduce using rule 55 (expressao -> NUMBER .)
    LE              reduce using rule 55 (expressao -> NUMBER .)
    GT              reduce using rule 55 (expressao -> NUMBER .)
    GE              reduce using rule 55 (expressao -> NUMBER .)
    AND             reduce using rule 55 (expressao -> NUMBER .)
    OR              reduce using rule 55 (expressao -> NUMBER .)
    DO              reduce using rule 55 (expressao -> NUMBER .)
    SEMICOLON       reduce using rule 55 (expressao -> NUMBER .)
    END             reduce using rule 55 (expressao -> NUMBER .)
    ELSE            reduce using rule 55 (expressao -> NUMBER .)
    RPAREN          reduce using rule 55 (expressao -> NUMBER .)
    COMMA           reduce using rule 55 (expressao -> NUMBER .)
    TO              reduce using rule 55 (expressao -> NUMBER .)
    DOWNTO          reduce using rule 55 (expressao -> NUMBER .)


state 48

    (56) expressao -> STRING_LITERAL .

    THEN            reduce using rule 56 (expressao -> STRING_LITERAL .)
    PLUS            reduce using rule 56 (expressao -> STRING_LITERAL .)
    MINUS           reduce using rule 56 (expressao -> STRING_LITERAL .)
    TIMES           reduce using rule 56 (expressao -> STRING_LITERAL .)
    DIVIDE          reduce using rule 56 (expressao -> STRING_LITERAL .)
    DIV             reduce using rule 56 (expressao -> STRING_LITERAL .)
    MOD             reduce using rule 56 (expressao -> STRING_LITERAL .)
    EQUAL           reduce using rule 56 (expressao -> STRING_LITERAL .)
    NE              reduce using rule 56 (expressao -> STRING_LITERAL .)
    LT              reduce using rule 56 (expressao -> STRING_LITERAL .)
    LE              reduce using rule 56 (expressao -> STRING_LITERAL .)
    GT              reduce using rule 56 (expressao -> STRING_LITERAL .)
    GE              reduce using rule 56 (expressao -> STRING_LITERAL .)
    AND             reduce using rule 56 (expressao -> STRING_LITERAL .)
    OR              reduce using rule 56 (expressao -> STRING_LITERAL .)
    DO              reduce using rule 56 (expressao -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 56 (expressao -> STRING_LITERAL .)
    END             reduce using rule 56 (expressao -> STRING_LITERAL .)
    ELSE            reduce using rule 56 (expressao -> STRING_LITERAL .)
    RPAREN          reduce using rule 56 (expressao -> STRING_LITERAL .)
    COMMA           reduce using rule 56 (expressao -> STRING_LITERAL .)
    TO              reduce using rule 56 (expressao -> STRING_LITERAL .)
    DOWNTO          reduce using rule 56 (expressao -> STRING_LITERAL .)


state 49

    (57) expressao -> TRUE .
